basic components outline

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,140 @@
+/* change styling, placeholders to have render to start from */
+
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    text-align: center;
   }
-}
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  .Header {
+    background-color: white;
+    min-height: 50vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    font-size: 12px;
+    color: magenta;
   }
-  to {
-    transform: rotate(360deg);
+
+  .body {
+    background-color: white;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: 14px;
+    color: magenta;
   }
-}
+
+  h1 {
+    align-items: center;
+    color: rgb(255, 255, 255);
+    margin-left: 10px;
+    text-shadow: 1px 2px rgb(196, 17, 91);
+  }
+
+  h2 {
+    color: rgb(12, 148, 182);
+    margin-left: 10px;
+    text-shadow: 1px 2px #9fff72;
+  }
+
+  h3 {
+    color: rgb(196, 17, 91);
+    margin-left: 10px;
+  }
+
+  h4 {
+    color: rgb(175, 0, 123);;
+    margin-left: 10px;
+  }
+
+  p {
+    color: rgb(199, 0, 139);
+    margin-left: 0px;
+  }
+
+  .user_card {
+    background-color: rgb(255, 145, 0);
+    display: block;
+    margin-left: 0px;
+    margin-right: 10px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    padding: 15px;
+  }
+
+  .event_cards {
+    align-items: center;
+    background-color: rgb(255, 251, 0);
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    display: grid;
+    margin: 10px;
+    grid-gap: 8px;
+    grid-template-columns: auto auto auto;
+  }
+
+  .events_form {
+    background-color: rgb(0, 255, 255);
+    margin: 10px;
+    padding: 20px;
+    align-items: center;
+  }
+
+  .todo_div {
+      background-color: rgb(206, 206, 255);
+      margin: 10px;
+      padding: 20px;
+      align-items: center;
+  }
+
+  .todo_form {
+      background-color: rgb(255, 191, 221);
+      margin: 10px;
+      padding: 20px;
+      align-items: center;
+    }
+
+  .table {
+    text-align: left;
+    color: rgb(7, 67, 95);
+  }
+
+  .search {
+    background-color: rgb(221, 255, 71);
+
+    text-align: center;
+    position: relative;
+    display: block;
+    margin: 10px;
+    padding: 2rem;
+  }
+
+  .searchWord {
+    text-align: center;
+    width: 100%;
+    border: 3px solid #ff1e00;
+    padding: 5px;
+    height: 3rem;
+    border-radius: 5px;
+    outline: none;
+    font-size: 3rem;
+  }
+
+  .card {
+    text-align: center;
+    color: rgb(7, 67, 95);
+  }
+
+  .card_title {
+    text-align: center;
+    color: rgb(7, 67, 95);
+    text-shadow: 1px 2px #8ac8e7;
+  }
+
+  .App-link {
+    color: #61dafb;
+  }
