--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,13 @@
     text-align: center;
   }
 
+  .navbar {
+  background-color: aliceblue;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-around;
+}
   .Header {
     background-color: white;
     min-height: 50vh;
