--- a/src/App.css
+++ b/src/App.css
@@ -14,12 +14,11 @@
 }
   .Header {
     background-color: white;
-    min-height: 50vh;
+    display: block;
     display: flex;
-    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 20px;
+    justify-content: space-around;
+    margin: 50px;
     font-size: 12px;
     color: magenta;
   }
