--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
   flex-wrap: nowrap;
   justify-content: space-around;
   font-size: 20px;
+  font-weight: 400 ;
+  text-shadow: 1px 2px rgb(0, 110, 129);
   color: darkblue;
 }
   .Header {
