--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,36 @@
 /* change styling, placeholders to have render to start from */
 
-
 .App {
-    text-align: center;
-    justify-content: center;
-    background-image: url(https://visiteurope.com/wp-content/uploads/Events4.jpg);
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-color: white
+  text-align: center;
+  justify-content: center;
+  background-image: url(https://visiteurope.com/wp-content/uploads/Events4.jpg);
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: white;
 }
-
 
 img {
-    max-height: 100px;
-    max-width: 250px;
+  max-height: 150px;
+  opacity: 1
 }
+
 img#header {
-    max-height: max-content;
-    max-width: -webkit-fill-available;
+  max-height: max-content;
+  max-width: -webkit-fill-available;
 }
 
 h6 {
-    font-size: -webkit-xxx-large;
+  font-size: -webkit-xxx-large;
 }
+
 footer {
-    padding-top: 25px;
-    color: white;
+  padding-top: 25px;
+  color: white;
 }
-  .navbar {
+
+.navbar {
   background-color: aliceblue;
   min-height: 20px;
   padding: 5px;
@@ -38,165 +39,180 @@ footer {
   flex-wrap: nowrap;
   justify-content: space-around;
   font-size: 16px;
-  font-weight: 400 ;
+  font-weight: 400;
   text-shadow: 1px 1px rgb(0, 110, 129);
   color: darkblue;
-  hover:
 }
 
-  #Header {
-    background-color: white;
-    display: block;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    margin: 50px;
+.navbar:hover {
+    color: orangered
+}
 
-  }
+#Header {
+  background-color: white;
+  display: block;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  margin: 50px;
+}
 
-  .body {
-    background-color: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    font-size: 14px;
-    color: magenta;
-  }
+.body {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+  color: magenta;
+}
 
-  h1 {
-    align-items: center;
-    color: rgb(255, 255, 255);
-    margin-left: 10px;
-    text-shadow: 1px 2px rgb(196, 17, 91);
-  }
+h1 {
+  align-items: center;
+  color: rgb(255, 255, 255);
+  margin-left: 10px;
+  text-shadow: 1px 2px rgb(196, 17, 91);
+}
 
-  h2 {
-    color: rgb(12, 148, 182);
-    margin-left: 10px;
-    text-shadow: 1px 2px #9fff72;
-  }
+h2 {
+  color: rgb(12, 148, 182);
+  margin-left: 10px;
+  text-shadow: 1px 2px #9fff72;
+}
 
-  h3 {
-    color: rgb(196, 17, 91);
-    margin-left: 10px;
-  }
+h3 {
+  color: rgb(196, 17, 91);
+  margin-left: 10px;
+}
 
-  h4 {
-    color: rgb(175, 0, 123);;
-    margin-left: 10px;
-  }
+h4 {
+  color: rgb(175, 0, 123);
+  margin-left: 10px;
+}
 
-  p {
-    color: rgb(0 129 46);
-    margin-left: 0px;
-  }
+p {
+  color: rgb(0 129 46);
+  margin-left: 0px;
+}
 
-  .user_card {
-    background-color: rgb(255, 145, 0);
-    display: block;
-    margin-left: 0px;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-    padding: 15px;
-  }
+.user_card {
+  background-color: rgb(255, 145, 0);
+  display: block;
+  margin-left: 0px;
+  margin-right: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  padding: 15px;
+}
 
-  .event_cards {
-    align-items: center;
-    background-color: rgb255 129 0 / 40%;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    display: grid;
-    margin: 5px;
-    grid-gap: 8px;
-    grid-template-columns: auto auto auto;
-    opacity: .9;
+.event_cards {
+  align-items: center;
+  background-color: rgb255 129 0 / 40%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  display: grid;
+  margin: 5px;
+  grid-gap: 8px;
+  grid-template-columns: auto auto auto;
+  opacity: 0.9;
+}
 
-  }
+.events_form {
+  background-color: #eec553;
+  margin: 10px;
+  padding: 20px;
+  align-items: center;
+  opacity: 0.7;
+}
 
-  .events_form {
-    background-color: #eec553;
-    margin: 10px;
-    padding: 20px;
-    align-items: center;
-    opacity: 0.7;
-  }
+.new_event {
+  opacity: 0.9;
+}
 
-  .new_event {
-      opacity: .9
-  }
+.todo_div {
+  background-color: rgb(206, 206, 255);
+  margin: 10px;
+  padding: 20px;
+  align-items: center;
+}
 
-  .todo_div {
-      background-color: rgb(206, 206, 255);
-      margin: 10px;
-      padding: 20px;
-      align-items: center;
-  }
+.todo_form {
+  background-color: rgb(255, 191, 221);
+  margin: 10px;
+  padding: 20px;
+  align-items: center;
+}
 
-  .todo_form {
-      background-color: rgb(255, 191, 221);
-      margin: 10px;
-      padding: 20px;
-      align-items: center;
-    }
+.table {
+  text-align: left;
+  color: rgb(7, 67, 95);
+}
 
-  .table {
-    text-align: left;
-    color: rgb(7, 67, 95);
-  }
+.button {
+  transition-duration: 0.4s;
+}
 
-  .button {
-    transition-duration: 0.4s;
-  }
+.button:hover {
+  background-color: #17ffec; /* Green */
+  color: black;
+}
 
-  .button:hover {
-    background-color: #17ffec; /* Green */
-    color: black;
-  }
+.search {
+  background-color: #eec553;
+  text-align: center;
+  position: relative;
+  display: block;
+  margin: 20px;
+  padding: 30px;
+  fill-opacity: inherit;
+  opacity: 0.8;
+}
 
-  .search {
-    background-color: #eec553;
-    text-align: center;
-    position: relative;
-    display: block;
-    margin: 20px;
-    padding: 30px;
-    fill-opacity: inherit;
-    opacity: 0.8;
-
-  }
-
-  .searchWord {
-    text-align: center;
-    width: 100%;
-    border: 3px solid #ff0000;
-    padding: 5px;
-    height: 3rem;
-    border-radius: 5px;
-    outline: none;
-    font-size: 3rem;
-  }
+.searchWord {
+  text-align: center;
+  width: 100%;
+  border: 3px solid #ff0000;
+  padding: 5px;
+  height: 3rem;
+  border-radius: 5px;
+  outline: none;
+  font-size: 3rem;
+}
 
 .card {
-    text-align: center;
-    color: aliceblue;
-    text-align: center;
-    border: grey solid 1px;
-    padding: 1rem;
-    width: 15rem;
-    height: 17rem;
-    display: inline-grid;
-    margin: .5rem .5rem;
-    box-shadow: 3px 4px #e04b52;
-    box-shadow: 0 0 black;
-    background-color: #eec553;
-    text-shadow: 1px 2px 0 black;
-
+  text-align: center;
+  color: aliceblue;
+  text-align: center;
+  border: grey solid 1px;
+  padding: 1rem;
+  width: 19rem;
+  height: 23rem;
+  display: inline-grid;
+  margin: 0.5rem 0.5rem;
+  box-shadow: 3px 4px #e04b52;
+  box-shadow: 0 0 black;
+  background-color: #eec553;
+  text-shadow: 1px 2px 0 black;
 }
 
 .about {
+  text-align: center;
+  color: white;
+  text-align: center;
+  border: grey solid 1px;
+  padding: 3rem;
+  width: 50rem;
+  height: auto;
+  display: inline-grid;
+  margin: 0.5rem 0.5rem;
+  background-color: #ff3535d8;
+  opacity: 0.8;
+  font-size: 24px;
+  text-shadow: 1px 1px 0 rgb(255, 255, 0);
+}
+
+.login_form {
     text-align: center;
     color: white;
     text-align: center;
@@ -205,32 +221,37 @@ footer {
     width: 50rem;
     height: auto;
     display: inline-grid;
-    margin: .5rem .5rem;
-    background-color: #ff3535d8;
-    opacity: .8;
+    margin: 0.5rem 0.5rem;
+    background-color: #ff35789f;
+    opacity: 0.9;
     font-size: 24px;
     text-shadow: 1px 1px 0 rgb(255, 255, 0);
+  }
 
-}
 .events_form.button:hover {
-    background-color: #17ffec; /* Green */
+  background-color: #17ffec; /* Green */
+  color: black;
+}
+
+.button.ui.red.button:hover {
+    background-color: #ff0000; /* Green */
     color: black;
 }
 
 form.ui.form.new_event {
-    padding: 1rem;
-    width: stretch;
-    height: auto;
-    display: inline-block;
-    background: #515DA2;
-    opacity: 1;
-    color: white;
-    text-shadow: 1px 1px 0 black;
-    margin: .5rem .5rem;
+  padding: 1rem;
+  width: stretch;
+  height: auto;
+  display: inline-block;
+  background: #515da2;
+  opacity: 1;
+  color: white;
+  text-shadow: 1px 1px 0 black;
+  margin: 0.5rem 0.5rem;
 }
-    form.ui.form.new_event.button:hover {
-        background-color: #17ffec; /* Green */
-        color: black;
+form.ui.form.new_event.button:hover {
+  background-color: #17ffec; /* Green */
+  color: black;
 }
 /* form.new_event {
     padding: 1rem;
@@ -242,12 +263,12 @@ form.ui.form.new_event {
     margin: .5rem .5rem;
 } */
 /*  */
-  /* .card_title {
+/* .card_title {
     text-align: center;
     color: rgb(7, 67, 95);
     text-shadow: 1px 2px #8ac8e7;
   } */
 
-  .App-link {
-    color: #61dafb;
-  }
+.App-link {
+  color: #61dafb;
+}
